--- a/breeds.html
+++ b/breeds.html
@@ -25,7 +25,7 @@
 <hr color="grey" size="5">
 <h2>Contact us if you have question!</h2>
 
-<form class="" action="index.html" method="post">
+<form class="" action="mailto:youremail@address.com" method="post" enctype="text/plain">
 <table>
   <thead>
     <tr>
@@ -36,19 +36,19 @@
   <tbody>
     <tr>
       <td><label>Your name</label></td>
-      <td>  <input type="text" name="" value=""></td>
+      <td>  <input type="text" name="yourName" value=""></td>
     </tr>
     <tr>
       <td><label>Your email address</label></td>
-      <td>  <input type="text" name="" value=""></td>
+      <td>  <input type="text" name="yourEmail" value=""></td>
     </tr>
     <tr>
       <td><label>Your message</label></td>
-      <td><textarea name="name" rows="8" cols="21"></textarea>
+      <td><textarea name="yourMessage" rows="8" cols="21"></textarea>
     </tr>
     <tr>
       <td><label>What is the colour of your guinea pig?</label></td>
-      <td>  <input type="color" name="" value=""></td>
+      <td>  <input type="color" name="yourColour" value=""></td>
 
     </tr>
     <tr>
@@ -66,6 +66,10 @@
       </tr>
     <tr>
       <td><label>Hairless</label></td>
+      <td><input type="checkbox" name="Hairless" value="Hairless"></td>
+    </tr>
+    <tr>
+      <td><label>Other</label></td>
       <td><input type="checkbox" name="Hairless" value="Hairless"></td>
     </tr>
   </tbody>
